# novowrap

./: .gitignore  .travis.yml  README.md  TODO  assembly.py  generate_frag.py  merge.py  merge_fragments.py  novowrap.py  package.txt  pyproject.toml  requirements.txt  setup.py  setup.py.bak  ui.py  utils.py  validate.py  validate_assembly.py
novowrap/: __main__.py  assembly.py  merge.py  third_party.py  ui.py  ui.spec  utils.py  validate.py
pianduan/: generate_frag.py  merge_fragments.py
src/novowrap/: __init__.py  assembly.py  merge.py
